--- a/public/index.css
+++ b/public/index.css
@@ -3,9 +3,10 @@
 }
 
 body {
-    background-image: url(Story-board.jpg);
+    /* background-image: url(Story-board.jpg);
     background-repeat: no-repeat;
-    background-size: 1650px 850px;
+    background-size: 1650px 850px; */
+    background-color: rgb(31, 83, 151);
     margin: 0%;
     display: flex;
     flex-direction: row;
@@ -93,8 +94,7 @@ body .box-container {
     padding: 10px;
 }
 
-.enter-box {
-    padding: 10px;
+.box-container .enter-box {
     font-size: large;
     border-radius: 10px;
     width: 88%;
@@ -104,10 +104,14 @@ body .box-container {
 .box-container button {
     border-radius: 10px;
     padding: 8px 10px;
-    border: none;
+    border: solid black 1px;
     width: 10%;
     padding: 10px;
-    background-color: antiquewhite;
+    background-color: rgb(63, 185, 15);
+}
+.box-container button:hover{
+    background-color: rgb(125, 214, 103);
+    transform: scale(1.05);
 }
 
 .text-area {
@@ -119,11 +123,12 @@ body .box-container {
 
 .popup-container {
     position: fixed;
-    background-image: url(Story-board.jpg);
+    /* background-image: url(finalSB.jpg);
     background-repeat: no-repeat;
-    background-size: 1650px 850px;
-    height: 100vh;
-    width: 100vw;
+    background-size: 1540px 780px; */
+    background-color:rgb(13, 53, 139);
+    height: 100%;
+    width: 100%;
     
     z-index: 1001;
     display: flex;
@@ -133,14 +138,15 @@ body .box-container {
 .glass-container{
     display: flex;
     justify-content: space-around;
-    align-content: center;
+    align-content:center;
+    flex-wrap: wrap;
 
     position: relative;
     width: 56%;
-    height: 40%;
+    height: 55%;
     padding: 30px;
-    border-top-right-radius: 20px;
-    box-shadow: 0 5px 15px rgba(0, 0,0, 0.5);
+    border-radius: 15px;
+    box-shadow: 0 5px 15px rgba(0, 0,0, 0.6);
     overflow: hidden;
     color: #000;
 
@@ -156,10 +162,18 @@ body .box-container {
     background-color: aliceblue;
     box-shadow: 0px 5px 15px;
     text-align: center;
+    font-size: medium;
     border-radius: 15px;
-    height: 300px;
-    width: 380px;
+    height: 380px;
+    width: 400px;
 }
+/* .glass-container .creators{
+    background-color: rgb(16, 56, 129);
+    height: 20%;
+    width: 200px;
+    border-radius: 15px;
+    
+} */
 .glass-container .popup-screen {
     /*maintain 3:2 width:height*/
     width: 390px;
@@ -194,9 +208,13 @@ body .box-container {
     background-color: antiquewhite;
     font-size: large;
     border-radius: 10px;
-    padding: 10px;
+    padding: 4px 10px;
     width: 20%;
     border: none;
+}
+.popup-screen button:hover{
+    background-color: rgb(185, 181, 181);
+    transform: scale(1.1);
 }
 
 /* vote-box */
@@ -236,13 +254,12 @@ body .box-container {
     flex-direction: column;
     padding: 5px;
     border-width: 5px;
-    border-color: black;
     margin: 5px;
 }
 
 .text-box {
-    /* background-color: antiquewhite; */
-    width: 90%;
+    background-color: rgba(255,255,255,0.5); 
+    width: 84%;
     height: max-content;
     max-height: 100%;
     border-radius: 10px;
@@ -254,20 +271,28 @@ body .box-container {
 
 .popup-vote button {
     padding: 10px;
+    background-color:whitesmoke;
+    color: black;
     border-radius: 10px;
     border: none;
     width: 90%;
     margin: 5px;
+    
+}
+.popup-vote button:hover{
+    background-color: black;
+    color: white;
+    transform: scale(1.07);
 }
 
 .popup-vote .pop-back1 {
     /* border-color: blueviolet; */
-    background-color: rgb(173, 117, 224);
+    background-color: rgba(173, 117, 224);
 }
 
 .popup-vote .pop-back2 {
     /* border-color: rgb(226, 95, 43); */
-    background-color: rgb(216, 131, 97);
+    background-color: rgba(216, 131, 97);
 }
 
 .popup-vote .pop-back3 {
@@ -307,9 +332,19 @@ body .box-container {
     z-index: 1050;
     position: absolute;
     top: 0%;
-    left: 0%;
+    left: 0%; 
+    text-align: center;
+    color: aliceblue;
+    animation: fade 500ms linear 0ms infinite;
+    animation-duration: 4s ;
 }
-
+@keyframes fade{
+    0%   {background-color:rgb(0, 0, 0);}
+  25%  {background-color: rgba(114, 114, 114, 0.829);}
+  50%  {background-color: rgb(75, 75, 75);}
+  75%  {background-color: rgba(114,114,114,0.829);}
+  100% {background-color: rgb(0, 0, 0);}
+}
 .prevent-play {
     position: absolute;
     top: 0%;
@@ -323,4 +358,25 @@ body .box-container {
     font-weight: 900;
     width: 100vw;
     height: 100vh;
+}
+/*Scroll bar style*/
+::-webkit-scrollbar {
+    width: 20px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px grey; 
+    border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: rgb(66, 148, 224); 
+    border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #b2cdff; 
 }
