--- a/public/index.css
+++ b/public/index.css
@@ -3,9 +3,9 @@
 }
 
 body {
-    /* background-image: url(Story-board.jpg);
-    background-repeat: no-repeat;
-    background-size: 1650px 850px; */
+    background-image: url(in-game-tile.png);
+    background-repeat: repeat;
+    background-size: 300px 300px;
     background-color: rgb(31, 83, 151);
     margin: 0%;
     display: flex;
@@ -26,7 +26,7 @@ body {
     color: whitesmoke;
    
 }
-body .leaderboard {
+.leaderboard {
     background-color: rgba(16, 67, 161,0.5);
     box-shadow: 0px 5px 15px;
     border-radius: 10px;
@@ -123,9 +123,9 @@ body .box-container {
 
 .popup-container {
     position: fixed;
-    /* background-image: url(finalSB.jpg);
-    background-repeat: no-repeat;
-    background-size: 1540px 780px; */
+    background-image: url(user-name-tile.png);
+    background-repeat: repeat;
+    background-size: 300px 300px;
     background-color:rgb(13, 53, 139);
     height: 100%;
     width: 100%;
