--- a/public/index.css
+++ b/public/index.css
@@ -4,9 +4,8 @@
 
 body {
     background-image: url(in-game-tile.png);
-    background-repeat: repeat;
-    background-size: 300px 300px;
-    background-color: rgb(31, 83, 151);
+    background-size: 300px;
+    /* background-color: rgb(31, 83, 151); */
     margin: 0%;
     display: flex;
     flex-direction: row;
@@ -21,16 +20,16 @@ body {
     height: 20%;
 }
 .game-title .title-box{
+    text-shadow: 0 0 3px #494949, 0 0 5px #000000;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     text-align: center;
     color: whitesmoke;
    
 }
-.leaderboard {
+body .leaderboard {
     background-color: rgba(16, 67, 161,0.5);
-    box-shadow: 0px 5px 15px;
     border-radius: 10px;
-   
+    box-shadow: 0px 5px 15px;
     height: 83vh;
     width: 24vw;
    
@@ -68,9 +67,8 @@ body .box-container {
     border-radius: 10px;
     width: 70vw;
     height: 83vh;
-    box-shadow: 0px 5px 15px;
-    
-    
+    box-shadow: 0px 5px 15px;   
+
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
@@ -124,9 +122,8 @@ body .box-container {
 .popup-container {
     position: fixed;
     background-image: url(user-name-tile.png);
-    background-repeat: repeat;
-    background-size: 300px 300px;
-    background-color:rgb(13, 53, 139);
+    background-size: 300px;
+    /* background-color:rgb(13, 53, 139); */
     height: 100%;
     width: 100%;
     
@@ -135,6 +132,23 @@ body .box-container {
     justify-content: center;
     align-items: center;
 }
+/* .popup-container .creators{
+    height: 100px;
+    width:390px;
+    background-color: aliceblue;
+    border-radius: 15px;
+    box-shadow: 0px 5px 15px;
+    position: absolute;
+    left: 23%;
+    bottom: 25%;
+
+    animation-name: fadein;
+    animation-duration: 4s;
+}
+@keyframes fadein{
+    from{opacity: 0;}
+    to{opacity: 1;}
+} */
 .glass-container{
     display: flex;
     justify-content: space-around;
@@ -146,9 +160,12 @@ body .box-container {
     height: 55%;
     padding: 30px;
     border-radius: 15px;
-    box-shadow: 0 5px 15px rgba(0, 0,0, 0.6);
-    overflow: hidden;
-    color: #000;
+    box-shadow: 0 0 1rem 0 rgba(0, 0, 0, .2); 
+   
+    background-color: rgba(255, 255, 255, .15);
+  
+    backdrop-filter: blur(5px);
+
 
     animation:zoom;
     animation-duration: 0.8s;
