--- a/public/index.css
+++ b/public/index.css
@@ -57,12 +57,24 @@ body {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    flex-wrap: wrap;
 }
 
 .player-list p {
     font-weight: 200;
     margin: 0%;
     padding: 0%;
+}
+
+.player-list span {
+    width: 100%;
+    font-size: x-small;
+    margin: 0%;
+    padding: 0%;
+}
+
+.player-list hr {
+    width: 100%;
 }
 
 .box-container {
@@ -82,6 +94,7 @@ body {
 
 
 .box-container>.voted-storybox {
+    border: antiquewhite solid 3px;
     background-color: antiquewhite;
     border-radius: 10px;
     width: 94%;
@@ -93,7 +106,6 @@ body {
     border-radius: 10px;
     border: antiquewhite solid 3px;
     width: 94%;
-    width: -6px;
     height: 25%;
     padding: 10px;
 }
@@ -102,19 +114,27 @@ body {
     font-size: large;
     border-radius: 10px;
     width: 88%;
+    border: antiquewhite solid 3px;
     background-color: antiquewhite;
+    /* outline-color: rgb(0, 255, 179); */
+    outline-color: rgb(0, 162, 255);
 }
 
 .box-container button {
     border-radius: 10px;
     padding: 8px 10px;
-    border: solid black 1px;
+    border: solid antiquewhite 1px;
     width: 10%;
     padding: 10px;
-    background-color: rgb(63, 185, 15);
+    background-color: rgb(0, 162, 255);
+    /* background-color: rgb(63, 185, 15); */
+    transition-duration: 00.3s;
+    outline-color: rgb(0, 162, 255);
+
 }
 .box-container button:hover{
-    background-color: rgb(125, 214, 103);
+    background-color: rgb(151, 217, 255);
+    /* background-color: rgb(125, 214, 103); */
     transform: scale(1.05);
 }
 
