--- a/public/index.css
+++ b/public/index.css
@@ -93,7 +93,7 @@ body {
 }
 
 
-.box-container>.voted-storybox {
+.voted-storybox {
     border: antiquewhite solid 3px;
     background-color: antiquewhite;
     border-radius: 10px;
@@ -101,13 +101,34 @@ body {
     height: 45%;
     padding: 10px;
 }
-.box-container>.Pactivity-box{
+
+.Pactivity-box{
     backdrop-filter: blur(2px);
     border-radius: 10px;
     border: antiquewhite solid 3px;
     width: 94%;
     height: 25%;
     padding: 10px;
+    /* overflow: auto; */
+    display: flex;
+    flex-direction: column; 
+    align-items: flex-start;
+}
+
+.author-name {
+    background-color: none;
+    color: antiquewhite;
+    margin: 5px;
+}
+
+.story-line-written {
+    background-color: aqua;
+    border-radius: 10px;
+    padding: 10px;
+    margin: 5px;
+    width: fit-content;
+    max-width: 80%;
+    word-wrap: normal;
 }
 
 .box-container .enter-box {
