--- a/public/index.css
+++ b/public/index.css
@@ -14,7 +14,7 @@ body {
     flex-wrap: wrap;
 
 }
- body .game-title{
+.game-title{
     background-color:none;
     width: 96%;
     height: 20%;
@@ -32,7 +32,7 @@ body {
     box-shadow: 0px 5px 15px;
     height: 83vh;
     width: 24vw;
-    padding: 5px;
+    padding: 10px;
 }
 
 .leaderboard h3 {
@@ -91,13 +91,12 @@ body {
     width: 70vw;
     height: 83vh;
     box-shadow: 0px 5px 15px;
-    padding: 5px; 
+    padding: 10px; 
 
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     flex-wrap: wrap;
     align-items: center;
-
 }
 
 
@@ -105,7 +104,7 @@ body {
     border: antiquewhite solid 3px;
     background-color: antiquewhite;
     border-radius: 10px;
-    width: 94%;
+    width: 100%;
     height: 45%;
     padding: 10px;
 }
@@ -114,8 +113,8 @@ body {
     backdrop-filter: blur(2px);
     border-radius: 10px;
     border: antiquewhite solid 3px;
-    width: 94%;
-    height: 25%;
+    width: 100%;
+    height: 30%;
     padding: 10px;
     overflow: auto;
     display: flex;
@@ -130,7 +129,6 @@ body {
 }
 
 .story-line-written {
-    /* background-color: aqua; */
     border-radius: 10px;
     padding: 10px;
     margin: 5px;
@@ -171,7 +169,7 @@ body {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    width: 96%;
+    width: 100%;
 }
 
 .popup-container {
