--- a/public/index.css
+++ b/public/index.css
@@ -143,7 +143,6 @@ body {
     width: 88%;
     border: antiquewhite solid 3px;
     background-color: antiquewhite;
-    /* outline-color: rgb(0, 255, 179); */
     outline-color: rgb(0, 162, 255);
 }
 
@@ -154,14 +153,12 @@ body {
     width: 10%;
     padding: 10px;
     background-color: rgb(0, 162, 255);
-    /* background-color: rgb(63, 185, 15); */
     transition-duration: 00.3s;
     outline-color: rgb(0, 162, 255);
 
 }
 .box-container button:hover{
     background-color: rgb(151, 217, 255);
-    /* background-color: rgb(125, 214, 103); */
     transform: scale(1.05);
 }
 
@@ -176,7 +173,7 @@ body {
     position: fixed;
     background-image: url(user-name-tile.png);
     background-size: 300px;
-    /* background-color:rgb(13, 53, 139); */
+    background-color:rgb(13, 53, 139);
     height: 100%;
     width: 100%;
     
@@ -201,7 +198,6 @@ body {
     box-shadow: 0 0 1rem 0 rgba(0, 0, 0, .2); 
    
     background-color: rgba(11, 42, 100, 0.15);
-    /* background-color: rgba(255, 255, 255, .15); */
   
     backdrop-filter: blur(5px);
 
@@ -214,10 +210,9 @@ body {
     from{transform: scale(0.3);}
     to{transform: scale(1);}
 }
+
 .glass-container .rule-box{
-    /* background-color: aliceblue; */
     background: none;
-    /* box-shadow: 0px 5px 15px; */
     text-align: start;
     font-size: medium;
     border-radius: 15px;
@@ -227,21 +222,13 @@ body {
     margin-right: 10px;
     order: 1;
 }
-/* .glass-container .creators{
-    background-color: rgb(16, 56, 129);
-    height: 20%;
-    width: 200px;
-    border-radius: 15px;
-    
-} */
+
 .glass-container .popup-screen {
     /*maintain 3:2 width:height*/
     width: 390px;
     height: 260px;
-    /* background-color: rgb(16, 67, 161); */
     background: none;
     border-radius: 10px;
-    /* box-shadow: 0px 5px 15px; */
     display: flex;
     justify-content: space-around;
     flex-direction: column;
@@ -251,7 +238,6 @@ body {
 }
 
 .popup-screen h2 {
-    /* font-family: Arial, Helvetica, sans-serif; */
     text-align: center;
     color: antiquewhite;
     margin: 0%;
@@ -261,7 +247,6 @@ body {
 .popup-screen input {
     font-size: larger;
     width: 65%;
-    /* border-radius: 10px; */
     padding: 10px;
     border: none;
     text-align: end;
@@ -272,7 +257,7 @@ body {
 }
 .popup-screen input::placeholder{
     color: white;
-    opacity: 65%;       /*__Placeholder visible nahi tha so white karke opacaity adjust kiya*/
+    opacity: 65%;
 }
 .popup-screen button {
     background-color: antiquewhite;
@@ -359,44 +344,12 @@ body {
     transform: scale(1.07);
 }
 
-/* .popup-vote .pop-back1 {
-    background-color: #AD75E0;
-}
-
-.popup-vote .pop-back2 {
-    background-color: #D88361;
-}
-
-.popup-vote .pop-back3 {
-    background-color: #E2D62B;
-}
-
-.popup-vote .pop-back4 {
-    background-color: #6CC519;
-}
-
-.popup-vote .pop-back5 {
-    background-color: #19C5AE;
-}
-
-.popup-vote .pop-back6 {
-    background-color: #4FA3EC;
-}
-
-.popup-vote .pop-back7 {
-    background-color: #DD34FF;
-}
-
-.popup-vote .pop-back8 {
-    background-color: #790A0A;
-} */
-
 .prevent-player {
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     background-color: rgba(250, 235, 215, 0.377);
     z-index: 1050;
-    position: absolute;
+    position: fixed;
     top: 0%;
     left: 0%; 
     text-align: center;
@@ -406,11 +359,12 @@ body {
 }
 @keyframes fade{
     0%   {background-color:rgba(16, 56, 131, 0.6);}
-  50%  {background-color: rgba(29, 180, 160, 0.6);}
-  100% {background-color: rgba(16, 56, 131, 0.6);}
+    50%  {background-color:rgba(29, 180, 160, 0.6);}
+    100% {background-color:rgba(16, 56, 131, 0.6);}
 }
+
 .prevent-play {
-    position: absolute;
+    position: fixed;
     top: 0%;
     left: 0%;
     background-color: rgb(16, 67, 161);
@@ -430,7 +384,6 @@ body {
 
 /* Track */
 ::-webkit-scrollbar-track {
-    /* box-shadow: inset 0 0 5px grey;  */
     border-radius: 10px;
 }
 
