--- a/public/index.css
+++ b/public/index.css
@@ -195,17 +195,24 @@ body {
     height: 55%;
     padding: 30px;
     border-radius: 15px;
-    box-shadow: 0 0 1rem 0 rgba(0, 0, 0, .2); 
+    /* box-shadow: 0 0 1rem 0 rgba(0, 0, 0, .2); 
    
     background-color: rgba(11, 42, 100, 0.15);
   
-    backdrop-filter: blur(5px);
-
+    backdrop-filter: blur(5px); */
+    background:rgba(255,255,255,0.2);
+    box-shadow: 0px 5px 20px;
 
     animation:zoom;
     animation-duration: 0.2s;
-
 }
+@supports ((-webkit-backdrop-filter: blur(1em)) or (backdrop-filter: blur(1em))) {
+    .glass-container {
+      /* background-color: rgba(255, 255, 255, .5); */
+      -webkit-backdrop-filter: blur(1em);
+      backdrop-filter: blur(1em);
+    }
+  }
 @keyframes zoom{
     from{transform: scale(0.3);}
     to{transform: scale(1);}
@@ -397,3 +404,115 @@ body {
 ::-webkit-scrollbar-thumb:hover {
     background: #b2cdff; 
 }
+@media  screen and (min-width:380px) and (max-width:1080px) {
+    .popup-container {
+        position: fixed;
+        background-image: url(user-name-tile.png);
+        background-size: 300px;
+        background-color:rgb(13, 53, 139);
+        height: 100%;
+        width: 100%;
+        
+        z-index: 1001;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    .glass-container{
+        display: flex;
+        justify-content: space-around;
+        align-content:center;
+        flex-wrap: wrap;
+        flex-direction: column;
+    
+        position: relative;
+        width: 850px;
+        height: 55%;
+        padding: 30px;
+        border-radius: 25px;
+    
+        background: rgba(255, 255, 255, 0.2);
+        animation:zoom;
+        animation-duration: 0.2s;
+    
+    }
+    @supports ((-webkit-backdrop-filter: blur(1em)) or (backdrop-filter: blur(1em))) {
+        .glass-container {
+          /* background-color: rgba(255, 255, 255, .5); */
+          -webkit-backdrop-filter: blur(1em);
+          backdrop-filter: blur(1em);
+        }
+      }
+    
+    .glass-container .rule-box{
+        background: none;
+        text-align: start;
+        font-size: 22px;
+        border-radius: 15px;
+        height: 440px;
+        width: 400px;
+        color: antiquewhite;
+        margin-right: 10px;
+        order: 2;
+    }
+    
+    .glass-container .popup-screen {
+        /*maintain 3:2 width:height*/
+        width: 390px;
+        height: 200px;
+        background: none;
+        border-radius: 10px;
+        display: flex;
+        justify-content: space-around;
+        flex-direction: column;
+        align-items: center;
+        order: 1;
+        margin-left: 10px;
+    }
+
+    body {
+        background-image: url(in-game-tile.png);
+        background-size: 300px;
+        background-color: rgb(31, 83, 151);
+        margin: 0%;
+        display: flex;
+        flex-direction: row;
+        /* justify-content: space-evenly; */
+        row-gap: 3em;
+        align-content: center;
+        flex-wrap: wrap;
+    
+    }
+    .game-title{
+        background-color:none;
+        width: 96%;
+        height: 20%;
+        order: 1;
+    }
+    .box-container {
+        background-color: rgba(16, 67, 161,0.5);
+        border-radius: 10px;
+        width: 76vw;
+        height: 48vh;
+        box-shadow: 0px 5px 15px;
+        padding: 10px; 
+    
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+        align-items: center;
+        order: 2;
+    }
+    .leaderboard {
+        background-color: rgba(16, 67, 161,0.5);
+        border-radius: 10px;
+        box-shadow: 0px 5px 15px;
+        height: 34vh;
+        width: 42vw;
+        padding: 10px;
+        overflow: auto;
+        order: 3;
+    }
+}
+
