--- a/public/index.css
+++ b/public/index.css
@@ -69,7 +69,7 @@ body {
 }
 
 .player-list p {
-    font-weight: 200;
+    font-weight: 400;
     margin: 0%;
     padding: 0%;
 }
@@ -145,6 +145,15 @@ body {
     border: antiquewhite solid 3px;
     background-color: antiquewhite;
     outline-color: rgb(0, 162, 255);
+    padding: 0.5%;
+}
+
+.enter-box:disabled{
+    background: rgb(0, 162, 255);
+}
+
+.enter-box:disabled::placeholder{
+    color: white;
 }
 
 .box-container button {
@@ -281,6 +290,32 @@ body {
     background-color: rgb(79, 163, 236);
     transform: scale(1.1);
     color: antiquewhite;
+}
+
+.colour-input {
+    border-radius: 10px;
+    border: none;
+    overflow: hidden;
+    padding: 0%;
+    height: 65px;
+    width: 65px;
+    margin-bottom: 10px;
+}
+
+#colour-selector-name{
+    color: antiquewhite;
+    font-size: larger;
+}
+
+#colour-selector {
+    border-radius: 10px;
+    padding: 0%;
+    border: none;
+    margin: none;
+    height: 80px;
+    width: 80px;
+    transform: translateX(-30%);
+    transform: translateY(-5%);
 }
 
 /* vote-box */
@@ -421,7 +456,7 @@ body {
 }
 
 
-@media  screen and (min-width:380px) and (max-width:1200px) and (min-height:1000px) and (max-height:2500px){
+@media  screen and (min-width:380px) and (max-width:1200px) and (min-height:600px) and (max-height:2500px){
     .game-title {
         font-size: 45px;
         height: fit-content;
@@ -450,6 +485,7 @@ body {
         justify-content: space-around;
         align-content:center;
         flex-direction: column;
+        /* flex-wrap: nowrap; */
         
         overflow: auto;
     
@@ -482,7 +518,8 @@ body {
     
     .popup-screen {
         width: 80vw;
-        height: 30vh;
+        min-height: 30vh;
+        height: fit-content;
         background: none;
         border-radius: 10px;
         display: flex;
@@ -501,6 +538,10 @@ body {
         margin-bottom: 3%;
     }
 
+    .popup-screen h2 {
+        margin-bottom: 30px;
+    }
+
     .popup-screen input::placeholder{
         text-align: center;
     }
@@ -512,11 +553,34 @@ body {
         border-radius: 30px;
     }
 
+    .colour-input {
+        border-radius: 60px;
+        overflow: hidden;
+        padding: 0%;
+        height: 100px;
+        width: 80%;
+        margin-bottom: 60px;
+    }
+
+    .colour-selector{
+        color: antiquewhite;
+        font-size: 42px;
+    }
+
+    #colour-selector {
+        padding: 0%;
+        border: none;
+        margin: none;
+        width: 100%;
+        height: 100%;
+    }
+
     body {
         background-image: url(in-game-tile.png);
         background-size: 800px;
         background-color: rgb(31, 83, 151);
         margin: 0%;
+        padding: 0%;
         display: flex;
         flex-direction: row;
         align-content: center;
@@ -538,7 +602,7 @@ body {
         width: 100vw;
         height: fit-content;
         box-shadow: 0 0 0;
-        padding: 30px;
+        padding: 10px;
         padding-top: 0%;
         padding-bottom: 0%;
     
@@ -576,6 +640,7 @@ body {
 
     .author-name {
         font-size: 45px;
+        width: 90%;
     }
 
     .text-area {
@@ -587,6 +652,7 @@ body {
         width: 74%;
         border-radius: 30px;
         padding: 2%;
+        outline: none;
     }
 
     .text-area button {
