--- a/public/index.css
+++ b/public/index.css
@@ -244,7 +244,7 @@ body {
 .popup-screen {
     /*maintain 3:2 width:height*/
     width: 390px;
-    height: 260px;
+    height: 300px;
     background: none;
     border-radius: 10px;
     display: flex;
@@ -272,6 +272,7 @@ body {
     outline: none;
     border-bottom: antiquewhite solid 2px;
     color: antiquewhite;
+    margin-bottom: 10px;
 }
 .popup-screen input::placeholder{
     color: white;
@@ -297,9 +298,12 @@ body {
     border: none;
     overflow: hidden;
     padding: 0%;
-    height: 65px;
-    width: 65px;
+    height: 40px;
+    width: 100px;
     margin-bottom: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 #colour-selector-name{
@@ -311,11 +315,10 @@ body {
     border-radius: 10px;
     padding: 0%;
     border: none;
-    margin: none;
-    height: 80px;
-    width: 80px;
-    transform: translateX(-30%);
-    transform: translateY(-5%);
+    margin: 0%;
+    height: 60px;
+    width: 100px;
+    transform: scale(1.2);
 }
 
 /* vote-box */
@@ -539,8 +542,7 @@ body {
         text-align: center;
         width: 75%;
         border-bottom-width: 5px;
-        margin-bottom: 0%;
-        /* margin-bottom: 3%; */
+        margin-bottom: 10px;
     }
 
     .popup-screen h2 {
