--- a/public/index.css
+++ b/public/index.css
@@ -63,6 +63,7 @@ body {
     border-radius: 500px;
     height: 20px;
     width: 20px;
+    border: solid rgba(0, 0, 0, 0.336) 1px;
 }
 
 .player-list p {
@@ -689,6 +690,7 @@ body {
     .profile-colour {
         width: 60px;
         height: 60px;
+        border: rgba(0, 0, 0, 0.336) solid 3px;
     }
 
     .pop-back {
